src/main/java/lexical/test/failing/09.ru
/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 3 | Caracter invalido:   |
'\0'

